5report/7-1/parser.output
   0  $accept : %entry% $end

   1  toplevel : expr SEMISEMI
   2           | letexpression
   3           | LET letandexpr SEMISEMI

   4  letexpression : LET var EQ expr letexpression
   5                | LET var EQ expr SEMISEMI

   6  letandexpr : var EQ expr LETAND var EQ letandexpr
   7             | expr

   8  expr : LET var EQ expr IN expr
   9       | IF expr THEN expr ELSE expr
  10       | arith_expr EQ arith_expr
  11       | arith_expr LT arith_expr
  12       | boolian_expr

  13  boolian_expr : boolian_expr OR factor2_expr
  14               | factor2_expr

  15  factor2_expr : factor2_expr AND arith_expr
  16               | arith_expr

  17  arith_expr : arith_expr PLUS factor_expr
  18             | arith_expr MINUS factor_expr
  19             | factor_expr

  20  factor_expr : factor_expr TIMES atomic_expr
  21              | factor_expr DIV atomic_expr
  22              | atomic_expr

  23  atomic_expr : INT
  24              | BOOL
  25              | ID
  26              | LPAR expr RPAR

  27  var : ID

  28  %entry% : '\001' toplevel

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	.  error

	%entry%  goto 2


state 1
	%entry% : '\001' . toplevel  (28)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LET  shift 6
	IF  shift 7
	LPAR  shift 8
	.  error

	toplevel  goto 9
	expr  goto 10
	letexpression  goto 11
	arith_expr  goto 12
	boolian_expr  goto 13
	factor2_expr  goto 14
	factor_expr  goto 15
	atomic_expr  goto 16


state 2
	$accept : %entry% . $end  (0)

	$end  accept


state 3
	atomic_expr : INT .  (23)

	.  reduce 23


state 4
	atomic_expr : BOOL .  (24)

	.  reduce 24


state 5
	atomic_expr : ID .  (25)

	.  reduce 25


state 6
	toplevel : LET . letandexpr SEMISEMI  (3)
	letexpression : LET . var EQ expr letexpression  (4)
	letexpression : LET . var EQ expr SEMISEMI  (5)
	expr : LET . var EQ expr IN expr  (8)

	INT  shift 3
	BOOL  shift 4
	ID  shift 17
	LET  shift 18
	IF  shift 7
	LPAR  shift 8
	.  error

	expr  goto 19
	letandexpr  goto 20
	var  goto 21
	arith_expr  goto 12
	boolian_expr  goto 13
	factor2_expr  goto 14
	factor_expr  goto 15
	atomic_expr  goto 16


state 7
	expr : IF . expr THEN expr ELSE expr  (9)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LET  shift 18
	IF  shift 7
	LPAR  shift 8
	.  error

	expr  goto 22
	arith_expr  goto 12
	boolian_expr  goto 13
	factor2_expr  goto 14
	factor_expr  goto 15
	atomic_expr  goto 16


state 8
	atomic_expr : LPAR . expr RPAR  (26)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LET  shift 18
	IF  shift 7
	LPAR  shift 8
	.  error

	expr  goto 23
	arith_expr  goto 12
	boolian_expr  goto 13
	factor2_expr  goto 14
	factor_expr  goto 15
	atomic_expr  goto 16


state 9
	%entry% : '\001' toplevel .  (28)

	.  reduce 28


state 10
	toplevel : expr . SEMISEMI  (1)

	SEMISEMI  shift 24
	.  error


state 11
	toplevel : letexpression .  (2)

	.  reduce 2


state 12
	expr : arith_expr . EQ arith_expr  (10)
	expr : arith_expr . LT arith_expr  (11)
	factor2_expr : arith_expr .  (16)
	arith_expr : arith_expr . PLUS factor_expr  (17)
	arith_expr : arith_expr . MINUS factor_expr  (18)

	PLUS  shift 25
	MINUS  shift 26
	EQ  shift 27
	LT  shift 28
	LET  reduce 16
	IN  reduce 16
	THEN  reduce 16
	ELSE  reduce 16
	RPAR  reduce 16
	SEMISEMI  reduce 16
	AND  reduce 16
	OR  reduce 16
	LETAND  reduce 16


state 13
	expr : boolian_expr .  (12)
	boolian_expr : boolian_expr . OR factor2_expr  (13)

	OR  shift 29
	LET  reduce 12
	IN  reduce 12
	THEN  reduce 12
	ELSE  reduce 12
	RPAR  reduce 12
	SEMISEMI  reduce 12
	LETAND  reduce 12


state 14
	boolian_expr : factor2_expr .  (14)
	factor2_expr : factor2_expr . AND arith_expr  (15)

	AND  shift 30
	LET  reduce 14
	IN  reduce 14
	THEN  reduce 14
	ELSE  reduce 14
	RPAR  reduce 14
	SEMISEMI  reduce 14
	OR  reduce 14
	LETAND  reduce 14


state 15
	arith_expr : factor_expr .  (19)
	factor_expr : factor_expr . TIMES atomic_expr  (20)
	factor_expr : factor_expr . DIV atomic_expr  (21)

	TIMES  shift 31
	DIV  shift 32
	LET  reduce 19
	IN  reduce 19
	PLUS  reduce 19
	MINUS  reduce 19
	EQ  reduce 19
	LT  reduce 19
	THEN  reduce 19
	ELSE  reduce 19
	RPAR  reduce 19
	SEMISEMI  reduce 19
	AND  reduce 19
	OR  reduce 19
	LETAND  reduce 19


state 16
	factor_expr : atomic_expr .  (22)

	.  reduce 22


17: reduce/reduce conflict (reduce 25, reduce 27) on EQ
state 17
	atomic_expr : ID .  (25)
	var : ID .  (27)

	.  reduce 25


state 18
	expr : LET . var EQ expr IN expr  (8)

	ID  shift 33
	.  error

	var  goto 34


state 19
	letandexpr : expr .  (7)

	.  reduce 7


state 20
	toplevel : LET letandexpr . SEMISEMI  (3)

	SEMISEMI  shift 35
	.  error


state 21
	letexpression : LET var . EQ expr letexpression  (4)
	letexpression : LET var . EQ expr SEMISEMI  (5)
	letandexpr : var . EQ expr LETAND var EQ letandexpr  (6)
	expr : LET var . EQ expr IN expr  (8)

	EQ  shift 36
	.  error


state 22
	expr : IF expr . THEN expr ELSE expr  (9)

	THEN  shift 37
	.  error


state 23
	atomic_expr : LPAR expr . RPAR  (26)

	RPAR  shift 38
	.  error


state 24
	toplevel : expr SEMISEMI .  (1)

	.  reduce 1


state 25
	arith_expr : arith_expr PLUS . factor_expr  (17)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LPAR  shift 8
	.  error

	factor_expr  goto 39
	atomic_expr  goto 16


state 26
	arith_expr : arith_expr MINUS . factor_expr  (18)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LPAR  shift 8
	.  error

	factor_expr  goto 40
	atomic_expr  goto 16


state 27
	expr : arith_expr EQ . arith_expr  (10)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LPAR  shift 8
	.  error

	arith_expr  goto 41
	factor_expr  goto 15
	atomic_expr  goto 16


state 28
	expr : arith_expr LT . arith_expr  (11)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LPAR  shift 8
	.  error

	arith_expr  goto 42
	factor_expr  goto 15
	atomic_expr  goto 16


state 29
	boolian_expr : boolian_expr OR . factor2_expr  (13)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LPAR  shift 8
	.  error

	arith_expr  goto 43
	factor2_expr  goto 44
	factor_expr  goto 15
	atomic_expr  goto 16


state 30
	factor2_expr : factor2_expr AND . arith_expr  (15)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LPAR  shift 8
	.  error

	arith_expr  goto 45
	factor_expr  goto 15
	atomic_expr  goto 16


state 31
	factor_expr : factor_expr TIMES . atomic_expr  (20)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LPAR  shift 8
	.  error

	atomic_expr  goto 46


state 32
	factor_expr : factor_expr DIV . atomic_expr  (21)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LPAR  shift 8
	.  error

	atomic_expr  goto 47


state 33
	var : ID .  (27)

	.  reduce 27


state 34
	expr : LET var . EQ expr IN expr  (8)

	EQ  shift 48
	.  error


state 35
	toplevel : LET letandexpr SEMISEMI .  (3)

	.  reduce 3


state 36
	letexpression : LET var EQ . expr letexpression  (4)
	letexpression : LET var EQ . expr SEMISEMI  (5)
	letandexpr : var EQ . expr LETAND var EQ letandexpr  (6)
	expr : LET var EQ . expr IN expr  (8)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LET  shift 18
	IF  shift 7
	LPAR  shift 8
	.  error

	expr  goto 49
	arith_expr  goto 12
	boolian_expr  goto 13
	factor2_expr  goto 14
	factor_expr  goto 15
	atomic_expr  goto 16


state 37
	expr : IF expr THEN . expr ELSE expr  (9)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LET  shift 18
	IF  shift 7
	LPAR  shift 8
	.  error

	expr  goto 50
	arith_expr  goto 12
	boolian_expr  goto 13
	factor2_expr  goto 14
	factor_expr  goto 15
	atomic_expr  goto 16


state 38
	atomic_expr : LPAR expr RPAR .  (26)

	.  reduce 26


state 39
	arith_expr : arith_expr PLUS factor_expr .  (17)
	factor_expr : factor_expr . TIMES atomic_expr  (20)
	factor_expr : factor_expr . DIV atomic_expr  (21)

	TIMES  shift 31
	DIV  shift 32
	LET  reduce 17
	IN  reduce 17
	PLUS  reduce 17
	MINUS  reduce 17
	EQ  reduce 17
	LT  reduce 17
	THEN  reduce 17
	ELSE  reduce 17
	RPAR  reduce 17
	SEMISEMI  reduce 17
	AND  reduce 17
	OR  reduce 17
	LETAND  reduce 17


state 40
	arith_expr : arith_expr MINUS factor_expr .  (18)
	factor_expr : factor_expr . TIMES atomic_expr  (20)
	factor_expr : factor_expr . DIV atomic_expr  (21)

	TIMES  shift 31
	DIV  shift 32
	LET  reduce 18
	IN  reduce 18
	PLUS  reduce 18
	MINUS  reduce 18
	EQ  reduce 18
	LT  reduce 18
	THEN  reduce 18
	ELSE  reduce 18
	RPAR  reduce 18
	SEMISEMI  reduce 18
	AND  reduce 18
	OR  reduce 18
	LETAND  reduce 18


state 41
	expr : arith_expr EQ arith_expr .  (10)
	arith_expr : arith_expr . PLUS factor_expr  (17)
	arith_expr : arith_expr . MINUS factor_expr  (18)

	PLUS  shift 25
	MINUS  shift 26
	LET  reduce 10
	IN  reduce 10
	THEN  reduce 10
	ELSE  reduce 10
	RPAR  reduce 10
	SEMISEMI  reduce 10
	LETAND  reduce 10


state 42
	expr : arith_expr LT arith_expr .  (11)
	arith_expr : arith_expr . PLUS factor_expr  (17)
	arith_expr : arith_expr . MINUS factor_expr  (18)

	PLUS  shift 25
	MINUS  shift 26
	LET  reduce 11
	IN  reduce 11
	THEN  reduce 11
	ELSE  reduce 11
	RPAR  reduce 11
	SEMISEMI  reduce 11
	LETAND  reduce 11


state 43
	factor2_expr : arith_expr .  (16)
	arith_expr : arith_expr . PLUS factor_expr  (17)
	arith_expr : arith_expr . MINUS factor_expr  (18)

	PLUS  shift 25
	MINUS  shift 26
	LET  reduce 16
	IN  reduce 16
	THEN  reduce 16
	ELSE  reduce 16
	RPAR  reduce 16
	SEMISEMI  reduce 16
	AND  reduce 16
	OR  reduce 16
	LETAND  reduce 16


state 44
	boolian_expr : boolian_expr OR factor2_expr .  (13)
	factor2_expr : factor2_expr . AND arith_expr  (15)

	AND  shift 30
	LET  reduce 13
	IN  reduce 13
	THEN  reduce 13
	ELSE  reduce 13
	RPAR  reduce 13
	SEMISEMI  reduce 13
	OR  reduce 13
	LETAND  reduce 13


state 45
	factor2_expr : factor2_expr AND arith_expr .  (15)
	arith_expr : arith_expr . PLUS factor_expr  (17)
	arith_expr : arith_expr . MINUS factor_expr  (18)

	PLUS  shift 25
	MINUS  shift 26
	LET  reduce 15
	IN  reduce 15
	THEN  reduce 15
	ELSE  reduce 15
	RPAR  reduce 15
	SEMISEMI  reduce 15
	AND  reduce 15
	OR  reduce 15
	LETAND  reduce 15


state 46
	factor_expr : factor_expr TIMES atomic_expr .  (20)

	.  reduce 20


state 47
	factor_expr : factor_expr DIV atomic_expr .  (21)

	.  reduce 21


state 48
	expr : LET var EQ . expr IN expr  (8)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LET  shift 18
	IF  shift 7
	LPAR  shift 8
	.  error

	expr  goto 51
	arith_expr  goto 12
	boolian_expr  goto 13
	factor2_expr  goto 14
	factor_expr  goto 15
	atomic_expr  goto 16


state 49
	letexpression : LET var EQ expr . letexpression  (4)
	letexpression : LET var EQ expr . SEMISEMI  (5)
	letandexpr : var EQ expr . LETAND var EQ letandexpr  (6)
	expr : LET var EQ expr . IN expr  (8)

	LET  shift 52
	IN  shift 53
	SEMISEMI  shift 54
	LETAND  shift 55
	.  error

	letexpression  goto 56


state 50
	expr : IF expr THEN expr . ELSE expr  (9)

	ELSE  shift 57
	.  error


state 51
	expr : LET var EQ expr . IN expr  (8)

	IN  shift 53
	.  error


state 52
	letexpression : LET . var EQ expr letexpression  (4)
	letexpression : LET . var EQ expr SEMISEMI  (5)

	ID  shift 33
	.  error

	var  goto 58


state 53
	expr : LET var EQ expr IN . expr  (8)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LET  shift 18
	IF  shift 7
	LPAR  shift 8
	.  error

	expr  goto 59
	arith_expr  goto 12
	boolian_expr  goto 13
	factor2_expr  goto 14
	factor_expr  goto 15
	atomic_expr  goto 16


state 54
	letexpression : LET var EQ expr SEMISEMI .  (5)

	.  reduce 5


state 55
	letandexpr : var EQ expr LETAND . var EQ letandexpr  (6)

	ID  shift 33
	.  error

	var  goto 60


state 56
	letexpression : LET var EQ expr letexpression .  (4)

	.  reduce 4


state 57
	expr : IF expr THEN expr ELSE . expr  (9)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LET  shift 18
	IF  shift 7
	LPAR  shift 8
	.  error

	expr  goto 61
	arith_expr  goto 12
	boolian_expr  goto 13
	factor2_expr  goto 14
	factor_expr  goto 15
	atomic_expr  goto 16


state 58
	letexpression : LET var . EQ expr letexpression  (4)
	letexpression : LET var . EQ expr SEMISEMI  (5)

	EQ  shift 62
	.  error


state 59
	expr : LET var EQ expr IN expr .  (8)

	.  reduce 8


state 60
	letandexpr : var EQ expr LETAND var . EQ letandexpr  (6)

	EQ  shift 63
	.  error


state 61
	expr : IF expr THEN expr ELSE expr .  (9)

	.  reduce 9


state 62
	letexpression : LET var EQ . expr letexpression  (4)
	letexpression : LET var EQ . expr SEMISEMI  (5)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LET  shift 18
	IF  shift 7
	LPAR  shift 8
	.  error

	expr  goto 64
	arith_expr  goto 12
	boolian_expr  goto 13
	factor2_expr  goto 14
	factor_expr  goto 15
	atomic_expr  goto 16


state 63
	letandexpr : var EQ expr LETAND var EQ . letandexpr  (6)

	INT  shift 3
	BOOL  shift 4
	ID  shift 17
	LET  shift 18
	IF  shift 7
	LPAR  shift 8
	.  error

	expr  goto 19
	letandexpr  goto 65
	var  goto 66
	arith_expr  goto 12
	boolian_expr  goto 13
	factor2_expr  goto 14
	factor_expr  goto 15
	atomic_expr  goto 16


state 64
	letexpression : LET var EQ expr . letexpression  (4)
	letexpression : LET var EQ expr . SEMISEMI  (5)

	LET  shift 52
	SEMISEMI  shift 54
	.  error

	letexpression  goto 56


state 65
	letandexpr : var EQ expr LETAND var EQ letandexpr .  (6)

	.  reduce 6


state 66
	letandexpr : var . EQ expr LETAND var EQ letandexpr  (6)

	EQ  shift 67
	.  error


state 67
	letandexpr : var EQ . expr LETAND var EQ letandexpr  (6)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LET  shift 18
	IF  shift 7
	LPAR  shift 8
	.  error

	expr  goto 68
	arith_expr  goto 12
	boolian_expr  goto 13
	factor2_expr  goto 14
	factor_expr  goto 15
	atomic_expr  goto 16


state 68
	letandexpr : var EQ expr . LETAND var EQ letandexpr  (6)

	LETAND  shift 55
	.  error


State 17 contains 1 reduce/reduce conflict.


24 terminals, 12 nonterminals
29 grammar rules, 69 states
